--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cinemavisor",
   "version": "1.0.0",
   "description": "Search and browse movies and tv at ease",
-  "main": "k.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
